...
            "value" : "Aussehen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Appearance"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Appearance"
...
            "value" : "Bearbeiten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Edit"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit"
...
            "value" : "Formát"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Format"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Format"
...
            "value" : "Allgemein"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "General"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "General"
...
            "value" : "Modus"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Mode"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mode"
...
            "value" : "Kurzbefehle"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Shortcuts"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Shortcuts"
...
            "value" : "Fragmenty kódu"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Snippets"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Snippets"
...
            "value" : "Fenster"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Window"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Window"
...
