...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="29">
                        <items>
                            <menuItem title="CotEditor" id="56">
                                <menu key="submenu" title="CotEditor" systemMenu="apple" id="57">
                                    <items>
                                        <menuItem title="About CotEditor" id="58">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <action selector="showAboutPanel:" target="Ady-hI-5gd" id="u8D-Wn-gmq"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="202"/>
                                        <menuItem title="Settings…" keyEquivalent="," id="129">
                                            <connections>
                                                <action selector="showSettingsWindow:" target="Ady-hI-5gd" id="B5S-pE-Q9J"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="143"/>
                                        <menuItem title="Services" id="131">
...
                                                <action selector="terminate:" target="Ady-hI-5gd" id="e2R-9T-s5O"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="File" id="83">
                                <menu key="submenu" title="File" id="81">
                                    <items>
                                        <menuItem title="New" keyEquivalent="n" id="82">
                                            <connections>
                                                <action selector="newDocument:" target="Ady-hI-5gd" id="82J-OW-zaP"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="New Window" keyEquivalent="N" id="cTV-Rh-597">
                                            <connections>
                                                <action selector="newDocumentAsWindow:" target="Ady-hI-5gd" id="O1V-BQ-IdO"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="New Tab" keyEquivalent="t" id="WCp-4v-OPR">
                                            <connections>
...
