...
            "value" : "Spende"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Donation"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Donation"
...
